# Engine

./: .gitignore  CMakeLists.txt
Engine/: Engine.hpp  pch.hpp
Engine/Core/: Application.hpp  Event.hpp  Logger.hpp  Window.hpp
Engine/Renderer/: Animation.hpp  Bone.hpp  Camera.hpp  Entity.hpp  Mesh.hpp  Shader.hpp  SkinnedMesh.hpp  Transform.hpp
Engine/Utils/: Assets.hpp
FBX2Mesh/: Cube.fbx  Main.cpp  Tiger.fbx  crate.fbx  teste.blend  teste.mesh
FBX2SMesh/: Main.cpp  crate.fbx  teste.fbx  teste.smesh  untitled.blend  untitled.fbx
FBX2SMesh/untitled.fbm/.mayaSwatches/: Body.png_hcm.swatch
Game/: Main.cpp
Sandbox/: example.mesh  main.cpp
builtin/: SkinnedMesh.vsh
